[workspace]
members = [
    "./pomsky-lib",
    "./pomsky-syntax",
    "./pomsky-bin",
    "./pomsky-macro",
    "./helptext",
    "./regex-test",
    "./benchmark",
]
default-members = ["./pomsky-bin", "./pomsky-lib", "./pomsky-syntax"]
resolver = "2"
package.edition = "2024"

[profile.release]
lto = "thin"
opt-level = 2
incremental = true

[profile.dist]
inherits = "release"
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = true
incremental = false
