[package]
name = "benchmark"
version = "0.1.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pomsky = { version = "0.6.0", path = "../pomsky-lib" }
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4" }
melody_compiler = "0.18.1"

[[bench]]
# run benchmarks with `cargo criterion -p pomsky`
name = "main"
harness = false
