[package]
name = "benchmark"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulex = { version = "0.4.4", path = "../rulex-lib" }
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4" }

[[bench]]
# run benchmarks with `cargo criterion -p rulex`
name = "main"
harness = false
