[package]
name = "benchmark"
version = "0.1.3"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pomsky = { version = "0.11.0", path = "../pomsky-lib" }
divan = "0.1.11"
melody_compiler = "0.19.0"

[[bench]]
# run benchmarks with `cargo bench -p benchmark`
name = "main"
harness = false
