[package]
name = "helptext"
description = "Create beautiful help messages"
version = "0.1.1"
edition.workspace = true
authors = ["Pomsky developers <info@pomsky-lang.org>"]
repository = "https://github.com/pomsky-lang/pomsky/tree/main/helptext"
readme = "README.md"
keywords = ["help", "colors"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
exclude = ["./docs/**"]
documentation = "https://docs.rs/helptext"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
