[package]
name = "pomsky-bin"
description = "Compile pomsky expressions, a new regular expression language"
version = "0.9.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org/"
repository = "https://github.com/rulex-rs/pomsky"
readme = "README.md"
keywords = ["regexp", "regex", "pomsky"]
categories = ["text-processing", "command-line-utilities"]


[[bin]]
name = "pomsky"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
lexopt = "0.2.1"
supports-color = "2.0.0"
helptext = { version = "0.1.0", path = "../helptext" }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }

[dependencies.miette]
version = "5.3.1"
features = ["fancy-no-backtrace"]

[dependencies.pomsky]
version = "0.9.0"
path = "../pomsky-lib"
features = ["dbg", "miette", "suggestions"]

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
predicates = "2.1.3"
