[package]
name = "pomsky-bin"
description = "Compile pomsky expressions, a new regular expression language"
version = "0.11.0"
edition.workspace = true
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org/"
repository = "https://github.com/pomsky-lang/pomsky"
readme = "README.md"
keywords = ["regexp", "regex", "pomsky"]
categories = ["text-processing", "command-line-utilities"]


[[bin]]
name = "pomsky"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["test"]
test = ["dep:pcre2", "dep:regex", "dep:ignore"]

[dependencies]
lexopt = "0.3.0"
supports-color = "3.0.2"
helptext = { version = "0.1.0", path = "../helptext" }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
pcre2 = { version = "0.2.5", optional = true }
regex = { version = "1.11.1", optional = true }
ignore = { version = "0.4.23", optional = true }

[dependencies.miette]
version = "7.4.0"
default-features = false
features = ["fancy-no-backtrace"]

[dependencies.pomsky]
version = "0.11.0"
path = "../pomsky-lib"
features = ["dbg", "miette", "suggestions"]

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "2.1.5"
