[package]
name = "pomsky"
description = "A new regular expression language"
version = "0.9.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/pomsky-lang/pomsky"
documentation = "https://docs.rs/pomsky"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
categories = ["text-processing", "parser-implementations"]
exclude = ["tests/**", "fuzz/**", "afl-fuzz/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = ["pomsky-syntax/dbg"]
suggestions = ["pomsky-syntax/suggestions"]

[dependencies]
pomsky-syntax = { version = "0.9.0", path = "../pomsky-syntax" }
arbitrary = { version = "1.2.2", features = ["derive"], optional = true }
miette = { version = "5.5.0", features = ["fancy"], optional = true }

[dev-dependencies]
lexopt = "0.3.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
atty = "0.2.14"
once_cell = "1.17.0"
regex = "1.7.1"
regex-test = { path = "../regex-test", features = ["async"], default-features = false }

[[test]]
name = "it"
path = "./tests/it/main.rs"
harness = false
