[package]
name = "pomsky"
description = "A new regular expression language"
version = "0.11.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/pomsky-lang/pomsky"
documentation = "https://docs.rs/pomsky"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
categories = ["text-processing", "parser-implementations"]
exclude = ["tests/**", "fuzz/**", "afl-fuzz/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = ["pomsky-syntax/dbg"]
suggestions = ["pomsky-syntax/suggestions"]
arbitrary = ["dep:arbitrary", "pomsky-syntax/arbitrary"]

[dependencies]
pomsky-syntax = { version = "0.11.0", path = "../pomsky-syntax" }
arbitrary = { version = "1.3.1", features = ["derive"], optional = true }

[dependencies.miette]
version = "5.10.0"
optional = true
features = ["fancy-no-backtrace"]

[dev-dependencies]
lexopt = "0.3.0"
regex = "1.10.2"
regex-test = { path = "../regex-test" }

[[test]]
name = "it"
path = "./tests/it/main.rs"
harness = false
