[package]
name = "pomsky-macro"
description = "Macro for converting pomsky expressions to regexes"
version = "0.11.0"
edition.workspace = true
authors = ["Pomsky developers <info@pomsky-lang.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/pomsky-lang/pomsky/blob/main/pomsky-macro"
repository = "https://github.com/pomsky-lang/pomsky"
documentation = "https://docs.rs/pomsky-macro"
keywords = ["macro", "regexp", "regex", "pomsky"]
categories = ["text-processing"]

[lib]
proc-macro = true

[features]
default = []
diagnostics = []

[dependencies]
pomsky = { version = "0.11.0", path = "../pomsky-lib" }
