[package]
name = "pomsky-syntax"
description = "Parser for pomsky, a new regular expression language"
version = "0.9.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/pomsky-lang/pomsky"
documentation = "https://docs.rs/pomsky"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
categories = ["text-processing", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = []
suggestions = ["strsim"]

[dependencies]
strsim = { version = "0.10.0", optional = true }

[dependencies.arbitrary]
version = "1.2.2"
features = ["derive"]
optional = true
