[package]
name = "pomsky-syntax"
description = "Parser for pomsky, a new regular expression language"
version = "0.12.0"
edition.workspace = true
authors = ["Pomsky developers <info@pomsky-lang.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/pomsky-lang/pomsky"
documentation = "https://docs.rs/pomsky-syntax"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "pomsky"]
categories = ["text-processing", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = []
suggestions = ["dep:strsim"]
arbitrary = ["dep:arbitrary"]

[dependencies]
strsim = { version = "0.11.1", optional = true }

[dependencies.arbitrary]
version = "1.3.1"
features = ["derive"]
optional = true
