[workspace]
members = ["."]

[package]
name = "pomsky-wasm"
description = "A portable, modern regular expression language"
homepage = "https://pomsky-lang.org"
version = "0.9.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rulex-rs/pomsky"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
suggestions = ["pomsky/suggestions"]

[dependencies]
wasm-bindgen = "0.2.82"

console_error_panic_hook = { version = "0.1.7", optional = true }

pomsky = { version = "0.9.0", features = ["miette"] }

miette = { version = "5.3.0", features = ["fancy"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
