[workspace]
members = ["."]
package.edition = "2021"

[package]
name = "compiler-web"
description = "A portable, modern regular expression language"
homepage = "https://pomsky-lang.org"
version = "0.11.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/pomsky-lang/pomsky"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
suggestions = ["pomsky/suggestions"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"

console_error_panic_hook = { version = "0.1.7", optional = true }

pomsky = { version = "0.11.0", path = "../pomsky-lib", features = ["miette"] }

miette = { version = "7.4.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
