[package]
name = "regex-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
async = ["dep:tokio"]
sync = []

[dependencies]
regex = "1.7.0"
pcre2 = "0.2.3"
onig = "6.4.0"

[dependencies.tokio]
version = "1.24.1"
optional = true
features = ["sync", "net", "io-util", "process", "macros"]