[package]
name = "rulex-bin"
description = "Compile rulex expressions, a new regular expression language"
version = "0.1.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]


[[bin]]
name = "rulex"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"

[dependencies.rulex]
version = "0.1.0"
path = "../rulex-lib"
features = ["dbg"]

[dependencies.clap]
version = "3.1.0"
default-features = false
features = ["std", "derive"]
