[package]
name = "rulex-bin"
description = "Compile rulex expressions, a new regular expression language"
version = "0.3.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rulex-rs/rulex"
repository = "https://github.com/rulex-rs/rulex"
readme = "README.md"
keywords = ["regexp", "regex", "rulex"]
categories = ["text-processing", "command-line-utilities"]


[[bin]]
name = "rulex"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
thiserror = "1.0.30"
miette = { version = "4.2.1", features = ["fancy"] }

[dependencies.rulex]
version = "0.3.0"
path = "../rulex-lib"
features = ["dbg", "miette"]

[dependencies.clap]
version = "3.1.0"
default-features = false
features = ["std", "derive", "wrap_help"]
