[package]
name = "rulex"
description = "A new regular expression language"
version = "0.1.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT or Apache-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = []

[dependencies]
thiserror = "1.0.30"
nom = "7.1.0"
miette = { version = "4.2.1", optional = true }

[dev-dependencies]
atty = "0.2.14"
once_cell = "1.9.0"

[[test]]
name = "it"
path = "./tests/it/main.rs"
harness = false
