[package]
name = "rulex"
description = "A new regular expression language"
version = "0.3.0"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Aloso/rulex"
repository = "https://github.com/Aloso/rulex"
documentation = "https://docs.rs/rulex"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "rulex"]
categories = ["text-processing", "parser-implementations"]
exclude = ["tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = []

[dependencies]
thiserror = "1.0.30"
nom = "7.1.0"
miette = { version = "4.2.1", optional = true }

[dev-dependencies]
atty = "0.2.14"
once_cell = "1.9.0"
regex = "1.5.5"

[[test]]
name = "it"
path = "./tests/it/main.rs"
harness = false
