[package]
name = "rulex"
description = "DEPRECATED: Use pomsky instead. A new regular expression language"
version = "0.4.4"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/rulex-rs/pomsky"
documentation = "https://docs.rs/rulex"
readme = "../README.md"
keywords = ["regexp", "regex", "syntax", "parser", "rulex"]
categories = ["text-processing", "parser-implementations"]
exclude = ["tests/**", "fuzz/**", "afl-fuzz/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dbg = []

[dependencies]
thiserror = "1.0.31"
nom = "7.1.0"
miette = { version = "4.7.1", optional = true }
arbitrary = { version = "1.1.2", features = ["derive"], optional = true }

[dev-dependencies]
atty = "0.2.14"
once_cell = "1.12.0"
regex = "1.5.6"

[[test]]
name = "it"
path = "./tests/it/main.rs"
harness = false
