[package]
name = "rulex-macro"
description = "Macro for converting rulex expressions to regexes"
version = "0.4.3"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rulex-rs/rulex/blob/main/rulex-macro"
repository = "https://github.com/rulex-rs/rulex"
documentation = "https://docs.rs/rulex-macro"
keywords = ["macro", "regexp", "regex", "rulex"]
categories = ["text-processing"]

[lib]
proc-macro = true

[features]
default = []
diagnostics = []

[dependencies]
rulex = { version = "0.4.3", path = "../rulex-lib" }
