[package]
name = "rulex-macro"
description = "DEPRECATED: Use pomsky-macro instead. Macro for converting pomsky expressions to regexes"
version = "0.4.4"
edition = "2021"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://pomsky-lang.org"
repository = "https://github.com/rulex-rs/pomsky"
documentation = "https://docs.rs/rulex-macro"
keywords = ["macro", "regexp", "regex", "rulex"]
categories = ["text-processing"]

[lib]
proc-macro = true

[features]
default = []
diagnostics = []

[dependencies]
rulex = { version = "0.4.4", path = "../rulex-lib" }
